# blog

./: .dockerignore  .editorconfig  .eslintrc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  Pipfile  README.md  app.py  docker-compose.yml  manage.py  package.json  pyproject.toml  vite.config.js  webpack.config.js
accounts/: models.py
accounts/migrations/: 0001_initial.py  0002_initial_data.py
admin/: apps.py  wagtail_hooks.py
blog/: asgi.py  chromium.py  context_processors.py  urls.py  wsgi.py
blog/settings/: __init__.py  development.py  production.py
blog/static_src/: index.js
blog/templates/: 403.html  404.html  500.html  base.html
content/posts/: adding-dark-mode-with-automatic-system-preference-selection.md  caddy-configuration-for-django-with-some-sensible-defaults.md  capturing-screenshots-with-chromium-using-python.md  code-formatting-a-python-project-in-2022.md  cool-uris-dont-change-unless-an-ai-rewrites-your-blog.md  counting-table-row-counts-in-postgresql.md  creating-a-pwa-with-nextjs-and-next-pwa-to-improve-your-websites-ux.md  generating-a-ed25519-ssh-key-with-openssh.md  (+12 more)
frontend/: package.json  vite.config.js
mail/: forms.py  models.py
pages/: models.py  urls.py  utils.py  views.py  wagtail_hooks.py
samplefiles/: Caddyfile.sample  env.sample  post-receive.sample
scheduler/: models.py  wagtail_hooks.py
src/: main.rs  markdown.rs  pdf.rs  posts.rs  templates.rs
static_src/: index.js
templates/: 404.html  base.html  blog_index.html  blog_post.html  blog_post_pdf.html  home.html  robots.txt  search.html  sitemap.xml
(+68 files in other folders)
